Agregado efecto parallax en el header

--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperative</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
 </head>
 <body>
-    
-
-
-
-
-
-
-<script src="index.js"></script>
+    <header class="encabezado">
+        <!-- <div> aqui debe ir el menu de navegacion
+        </div> -->
+        <h1>Simpre atentos para servirte</h1>
+    </header>
+    <main>
+        <section class="seccion-1">
+            <h1>
+                Hola
+            </h1>
+        </section>
+        <section class="seccion-2">
+            <h2>
+                Como estas
+            </h2>
+        </section>
+        <section class="seccion-3">
+            <h3>
+                Bien y tu?
+            </h3>
+        </section>
+    </main>
 </body>
 </html>
